--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -31,6 +32,7 @@
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "prettier": "3.0.3",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
